fix spacing around "watch/unwatch" buttons

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -302,13 +302,13 @@ div.upload_avatar
 .watching
   background: rgb(250, 250, 250)
   border: solid 1px rgb(230, 230, 230)
-  padding: 10px
-    left: 5px
-  margin-bottom: 5px
+  padding: .5em
+  margin-bottom: .5em
   color: rgb(160, 160, 160)
-  -moz-border-radius: 4px
-  -webkit-border-radius: 4px
+  +rounded(4px)
   font-size: 12px
+  .button
+    margin-bottom: 0
   .state
     font-weight: bold
     &.started
